--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,16 @@
-Flask==2.2.5
-h5py==3.9.0
-keras==2.10.0
-Keras-Preprocessing==1.1.2
-numpy==1.26.4
-oauthlib==3.2.2
-opencv-python==4.9.0.80
+Flask
+numpy
+opencv-python
 opt-einsum==3.3.0
 packaging==23.2
 pip==23.3.1
-protobuf==3.20.3
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.21
-PyJWT==2.4.0
-pyOpenSSL==23.2.0
 requests==2.31.0
 requests-oauthlib==1.3.0
 rsa==4.7.2
 scipy==1.12.0
 setuptools==68.2.2
 six==1.16.0
-tensorboard==2.10.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.10.0
-tensorflow-estimator==2.10.0
-termcolor==2.1.0
-typing_extensions==4.9.0
+tensorflow
 urllib3==2.1.0
 Werkzeug==2.3.8
 wheel==0.41.2
